# uvisor-lib

./: .gitignore  .gitmodules  DOCUMENTATION.md  Makefile  README.md  mbed_license.txt  module.json
debug/: Makefile  Makefile.scripts
source/: CMakeLists.txt  benchmark.cpp  bitband.cpp  interrupts.cpp  support_nuvoton.cmake  support_nxp.cmake  support_silicon_labs.cmake  support_stmicroelectronics.cmake  unsupported.c
source/MK64FN1M0XXX12/: uvisor-GCC_ARM.s  uvisor-MK64FN1M0XXX12.box  version.txt
source/STM32F429ZI/: uvisor-GCC_ARM.s  uvisor-STM32F429ZI.box
source/STM32F429xx/: uvisor-GCC_ARM.s  uvisor-STM32F429xx.box  version.txt
source/efm32/: version.txt
source/kinetis/: version.txt
source/stm32/: version.txt
test/irq/: box0_basic.cpp  box0_nested.cpp  common.h  main.cpp  main_acl.h  test_basic.cpp  test_nested.cpp
test/irq_basic/: main.cpp
test/irq_nested/: main.cpp
test/secure_gateway/: box0_box1.cpp  box0_boxN.cpp  box1.cpp  box1.h  box2.cpp  box2.h  box3.cpp  box3.h  box4.cpp  box4.h  boxN_acl.h  common.cpp  common.h  main.cpp  nesting_patterns.cpp  nesting_patterns.h
uvisor/: uvisor.h
uvisor-lib/: benchmark.h  box_config.h  debug.h  debug_exports.h  disabled.h  error.h  halt_exports.h  interrupts.h  override.h  register_gateway.h  secure_access.h  secure_gateway.h  svc_exports.h  svc_gw_exports.h  unsupported.h  unvic_exports.h  uvisor-lib.h  uvisor_exports.h  vmpu_exports.h
